--- a/config/database.yml
+++ b/config/database.yml
@@ -8,9 +8,9 @@ default: &default
 
 development:
   <<: *default
-  database: _development
+  database: vendas_dev
 
 
 test:
   <<: *default
-  database: _test
+  database: vendas_test
